--- a/style.css
+++ b/style.css
@@ -55,11 +55,26 @@ model-viewer {
     background-color: rgb(64, 203, 203);
     color: black;
     padding: 5px;
-    border: none;
     font-size: 20px;
     z-index: 10;
     border-radius: 10%;
     font-family: 'Orbitron', sans-serif;
+    border: 2px solid black;
+}
+
+#cut-kidney-btn {
+    position: absolute;
+    bottom: 100px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 10px 20px;
+    background-color: rgb(64, 203, 203);
+    color: black;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    display: none; /* Hidden by default */
+    z-index: 1000;
     border: 2px solid black;
 }
 
